Optimize blog article box whitespace and fix loaded articles margin problem
Fix #57 & Fix #53

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -113,6 +113,9 @@ body > .background-color {
   max-width: 960px;
   margin: 0 auto;
 }
+.blog-page .wrap {
+  max-width: 976px;
+}
 
 .common-page .wrap-inner {
   max-width: 650px;
@@ -800,7 +803,7 @@ span[style*="font-size"] {
 .no-svg .post-add-link .post-add-link-inner .ico-newspaper {
   display: none;
 }
-@media screen and (max-width: 506px) {
+@media screen and (max-width: 480px) {
   .post-add-link .post-add-link-inner {
     width: 100%;
   }
@@ -814,7 +817,7 @@ span[style*="font-size"] {
   display: table-cell;
   vertical-align: middle;
 }
-@media screen and (max-width: 506px) {
+@media screen and (max-width: 480px) {
   .post-add-link .wrap {
     position: absolute;
     top: 50%;
@@ -852,7 +855,7 @@ span[style*="font-size"] {
   font-size: 18px;
   line-height: 1.3;
 }
-@media screen and (max-width: 506px) {
+@media screen and (max-width: 480px) {
   .post-add-link {
     position: relative;
     height: auto;
@@ -911,37 +914,22 @@ span[style*="font-size"] {
   color: black;
 }
 
+.blog-page .blog {
+  font-size: 0;
+}
 .blog-page .post {
   display: inline-block;
   vertical-align: top;
   margin-top: 25px;
-  margin-right: 21.5px;
+  margin-right: 12px;
+  margin-left: 12px;
   text-align: left;
   line-height: 1.2;
 }
 .blog-page .post.post-add-link {
   text-align: center;
 }
-.blog-page .post:nth-child(4n) {
-  margin-right: 0;
-}
-@media screen and (max-width: 999px) {
-  .blog-page .post:nth-child(4n) {
-    margin-right: 21.5px;
-  }
-  .blog-page .post:nth-child(3n+3) {
-    margin-right: 0;
-  }
-}
-@media screen and (max-width: 752px) {
-  .blog-page .post:nth-child(2n+1) {
-    margin-right: 21.5px;
-  }
-  .blog-page .post:nth-child(2n) {
-    margin-right: 0;
-  }
-}
-@media screen and (max-width: 506px) {
+@media screen and (max-width: 480px) {
   .blog-page .post {
     display: block;
     width: 100%;
@@ -950,9 +938,6 @@ span[style*="font-size"] {
   }
   .blog-page .post:first-child {
     margin-top: 0;
-  }
-  .blog-page .post:nth-child(2n), .blog-page .post:nth-child(2n+1) {
-    margin-right: auto;
   }
   .blog-page .post .post-position {
     position: relative;
@@ -1002,7 +987,7 @@ span[style*="font-size"] {
   height: 270px;
   padding: 15px 20px;
 }
-@media screen and (max-width: 506px) {
+@media screen and (max-width: 480px) {
   .blog-page .post .post-header {
     width: auto;
     height: auto;
@@ -1026,9 +1011,6 @@ span[style*="font-size"] {
 .blog-page .post .post-content,
 .blog-page .post .post-footer {
   text-align: right;
-}
-.blog-page .post .post-footer {
-  margin-top: -5px;
 }
 .blog-page .post .post-footer .post-date {
   font-size: 12px;
