--- a/stylesheets/scss/_blog-and-article.scss
+++ b/stylesheets/scss/_blog-and-article.scss
@@ -47,7 +47,7 @@
       }
     }
 
-    @include query($mobile-4) {
+    @include query($mobile-5) {
       width: 100%;
     }
   }
@@ -62,7 +62,7 @@
       vertical-align: middle;
     }
 
-    @include query($mobile-4) {
+    @include query($mobile-5) {
       position: absolute;
       top: 50%;
       left: 50%;
@@ -102,7 +102,7 @@
     line-height: 1.3;
   }
 
-  @include query($mobile-4) {
+  @include query($mobile-5) {
     position: relative;
     height: auto;
 
@@ -178,13 +178,15 @@
 .blog-page {
   .blog {
     @extend %clearfix;
+    font-size: 0;
   }
 
   .post {
     display: inline-block;
     vertical-align: top;
     margin-top: 25px;
-    margin-right: 21.5px;
+    margin-right: 12px;
+    margin-left: 12px;
     text-align: left;
     line-height: 1.2;
 
@@ -192,31 +194,7 @@
       text-align: center;
     }
 
-    &:nth-child(4n) {
-      margin-right: 0;
-    }
-
-    @include query($tablet-3) {
-      &:nth-child(4n) {
-        margin-right: 21.5px;
-      }
-
-      &:nth-child(3n+3) {
-        margin-right: 0;
-      }
-    }
-
-    @include query($tablet-5) {
-      &:nth-child(2n+1) {
-        margin-right: 21.5px;
-      }
-
-      &:nth-child(2n) {
-        margin-right: 0;
-      }
-    }
-
-    @include query($mobile-4) {
+    @include query($mobile-5) {
       display: block;
       width: 100%;
       max-width: none;
@@ -226,10 +204,6 @@
         margin-top: 0;
       }
 
-      &:nth-child(2n),
-      &:nth-child(2n+1) {
-        margin-right: auto;
-      }
 
       .post-position {
         position: relative;
@@ -286,7 +260,7 @@
       height: 270px;
       padding: 15px 20px;
 
-      @include query($mobile-4) {
+      @include query($mobile-5) {
         width: auto;
         height: auto;
       }
@@ -313,8 +287,6 @@
     }
 
     .post-footer {
-      margin-top: -5px;
-
       .post-date {
         font-size: 12px;
       }
