--- a/stylesheets/scss/_general.scss
+++ b/stylesheets/scss/_general.scss
@@ -117,6 +117,10 @@ body {
 .wrap {
   max-width: 960px;
   margin: 0 auto;
+
+  .blog-page & {
+    max-width: 976px;
+  }
 }
 
 .wrap-inner {
